testcases/error/invalid_statement.veryl
module invalid_statement {
    always_comb {
        return 1;
    }
}
